@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6829 2004/08/09 14:20:28 taya Exp $
+$NetBSD: CHANGES,v 1.6830 2004/08/09 16:48:19 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -3768,3 +3768,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated ImageMagick to 6.0.4-3 [adam 2004-08-09]
 	Updated mozilla to 1.7.2 [taya 2004-08-09]
 	Updated mozilla-gtk2 to 1.7.2 [taya 2004-08-09]
+	Updated alee-ttf to 1.1 [minskim 2004-08-09]
